# decrees

./: README.md  pyproject.toml
decrees/: __init__.py  utilities.py
tests/: test_decrees.py
